Done playing with Haml and Sass - Start coding

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,7 +1,7 @@
 body {
-  background-color: #fff;
+  background-color:#cc6;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: arial, verdana, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px; }
 
@@ -28,7 +28,7 @@ div {
     margin-bottom: 10px; } }
 
 #notice {
-  color: green; }
+  color: #363; }
 
 .field_with_errors {
   padding: 2px;
